snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1-sources.jar.sha256
d031146a9e13ce3019f8fd186139145c381ebd091b804a0c8b5b39f40e98c0b9